@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*powerpack-0.1.1 (03 Jun 2015)
+
+  03 Jun 2015; Hans de Graaff <graaff@gentoo.org> +powerpack-0.1.1.ebuild:
+  Version bump.
+
   15 May 2015; Hans de Graaff <graaff@gentoo.org> powerpack-0.1.0.ebuild:
   Add ruby22.
 
